# the_empire_elites_v1

./: README.md  get_groq_key.md  pyproject.toml  test_ollama.py
src/the_empire_elites/: crew.py  main.py
src/the_empire_elites/config/: agents.yaml  tasks.yaml
